The correct property name would be a good idea

--- a/templates/polyfill.hbs
+++ b/templates/polyfill.hbs
@@ -7,5 +7,5 @@ if (!navigator.language) {
 }
 
 if (!navigator.languages) {
-  navigator.language = {{{ languages }}};
+  navigator.languages = {{{ languages }}};
 }
